horizontal overflow fixed

--- a/css/style.css
+++ b/css/style.css
@@ -327,6 +327,7 @@
 	.item-list
 	{
 		float: left;
+		overflow: hidden;
 	}
 	
 	.language-options
@@ -435,6 +436,7 @@
 	.vaultItems
 	{
 		display: inline-block;
+		overflow: hidden;
 	}
 	
 /*********************************************************************************/
